src-ken&y/objects/Work_Center__c.object
<CustomObject>
    <customHelpPage>HelpWorkCenters</customHelpPage>
    <description>Work Center used in Routing Operations</description>
    <fields>
        <fullName>Company__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Company this Work Center belongs to</description>
        <label>Company</label>
        <referenceTo>Company__c</referenceTo>
        <relationshipLabel>Work Centers</relationshipLabel>
        <relationshipName>Work_Centers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <description>Work center</description>
        <label>Description</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ExtId__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Facility__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to Facility</description>
        <inlineHelpText>Lookup to Facility</inlineHelpText>
        <label>Facility</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>Facility Company does not match Work Center Company</errorMessage>
            <filterItems>
                <field>Facility__c.Company__c</field>
                <operation>equals</operation>
                <valueField>$Source.Company__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Facility__c</referenceTo>
        <relationshipLabel>Work Centers</relationshipLabel>
        <relationshipName>Work_Centers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Manufacturing_Calendar__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Manufacturing Calendar</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>1 AND 2</booleanFilter>
            <filterItems>
                <field>Calendar__c.Type__c</field>
                <operation>equals</operation>
                <value>Manufacturing</value>
            </filterItems>
            <filterItems>
                <field>Calendar__c.Company__c</field>
                <operation>equals</operation>
                <valueField>$Source.Company__c</valueField>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Calendar__c</referenceTo>
        <relationshipLabel>Work Centers</relationshipLabel>
        <relationshipName>Work_Centers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Manufacturing_Overhead_Factor__c</fullName>
        <label>Manufacturing Overhead Factor</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Work_Center_Unique__c</fullName>
        <description>Work Center plus Company for uniqueness</description>
        <label>Work Center Unique</label>
        <length>160</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Work Center</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Description__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Work Center</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Work Centers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Company_must_not_change</fullName>
        <active>true</active>
        <description>after creating a Work Center for a given company, do not allow the Work Center to change to another company</description>
        <errorConditionFormula>ISCHANGED(Company__c)</errorConditionFormula>
        <errorMessage>Once created for a Company, the Work Center must not change Company field.</errorMessage>
    </validationRules>
</CustomObject>